examples/demo/tests/requests/snapshots/_response_empty@auth_request.snap
---
source: tests/requests/responses.rs
expression: "(response.status_code(), response.text(), headers)"
---
(
    200,
    "",
    {
        "x-powered-by": "loco.rs",
    },
)
