examples/demo/tests/requests/snapshots/_response_etag@auth_request.snap
---
source: tests/requests/responses.rs
expression: "(response.status_code(), response.text(), headers)"
---
(
    200,
    "",
    {
        "etag": "loco-etag",
        "x-powered-by": "loco.rs",
    },
)
