examples/demo/tests/requests/snapshots/_response_html@auth_request.snap
---
source: tests/requests/responses.rs
expression: "(response.status_code(), response.text(), headers)"
---
(
    200,
    "hello, world",
    {
        "content-type": "text/html; charset=utf-8",
        "x-powered-by": "loco.rs",
    },
)
