examples/demo/tests/requests/snapshots/_response_json@auth_request.snap
---
source: tests/requests/responses.rs
expression: "(response.status_code(), response.text(), headers)"
---
(
    200,
    "{\"ok\":true}",
    {
        "content-type": "application/json",
        "x-powered-by": "loco.rs",
    },
)
