examples/demo/tests/requests/snapshots/_response_redirect@auth_request.snap
---
source: tests/requests/responses.rs
expression: "(response.status_code(), response.text(), headers)"
---
(
    303,
    "",
    {
        "location": "/dashboard",
        "x-powered-by": "loco.rs",
    },
)
