examples/demo/tests/requests/snapshots/_response_render_with_status_code@auth_request.snap
---
source: tests/requests/responses.rs
expression: "(response.status_code(), response.text(), headers)"
---
(
    201,
    "",
    {
        "x-powered-by": "loco.rs",
    },
)
