examples/demo/tests/requests/snapshots/_response_set_cookie@auth_request.snap
---
source: tests/requests/responses.rs
expression: "(response.status_code(), response.text(), headers)"
---
(
    200,
    "null",
    {
        "set-cookie": "loco-cookie-name=loco-cookie-value; HttpOnly; SameSite=Strict; Secure; Path=/",
        "content-type": "application/json",
        "x-powered-by": "loco.rs",
    },
)
