examples/demo/tests/requests/snapshots/_response_text@auth_request.snap
---
source: tests/requests/responses.rs
expression: "(response.status_code(), response.text(), headers)"
---
(
    200,
    "Loco",
    {
        "content-type": "text/plain; charset=utf-8",
        "x-powered-by": "loco.rs",
    },
)
