examples/demo/tests/requests/snapshots/can_convert_user_to_admin_role@auth_request.snap
---
source: tests/requests/user.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"pid\":\"PID\",\"name\":\"loco\",\"email\":\"test@loco.com\",\"role\":\"Admin\"}",
)
